--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/three": "^0.161.2",
