--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
+    "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.50.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^11.18.2",
