--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "mongodb": "^5.9.2",
-    "next": "14.1.0",
+    "next": "^14.2.30",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "ogl": "^1.0.11",
