--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.8.0",
+    "styled-components": "^6.1.19",
     "three": "^0.161.0"
   },
   "devDependencies": {
